hphp/test/slow/readonly/default_param.php.expectf

Fatal error: This expression is readonly, but we expected a mutable value because this parameter is not marked readonly in %s on line 7
